--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,10 @@
 }
 
 .container {
+    margin-left: auto;
+    margin-right: auto;
     padding: 30px;
+    max-width: 600px;
     width: 100vw;
     height: 100vh;
     display: grid;
@@ -28,6 +31,9 @@
 
 .block{
 /* Add styling to center X or O and size to fill box  */
+    display: grid;
+    place-items: center;
+    font-size: 3em;
 }
 
 #block1, #block2, #block4, #block5 {
