--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
     margin-left: auto;
     margin-right: auto;
     padding: 30px;
-    max-width: 600px;
+    max-width: 500px;
     width: 100vw;
     height: 100vh;
     display: grid;
@@ -24,13 +24,12 @@
 
 .gameDetails {
     grid-column: 1/4;
-    background-color: red;
+    background-color: lightgray;
     border: solid;
     margin-bottom: 10px;
 }
 
-.block{
-/* Add styling to center X or O and size to fill box  */
+.blocks{
     display: grid;
     place-items: center;
     font-size: 3em;
