--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,18 @@
     background-color: lightgray;
     border: solid;
     margin-bottom: 10px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    place-items: center;
+}
+
+.gameDetails__displayElement {
+    grid-row: 3/4;
+    grid-column: 1/3;
+}
+.gameDetails__button {
+    grid-column: 1/3;
 }
 
 .blocks{
