--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,64 @@
 :root {
-    --boardBorder: 4px solid black;
-  }
-  
+  --boardBorder: 4px solid black;
+}
 
 * {
-    margin: 0;
-    padding: 0;
-    outline: black 2px  ;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: black 2px;
+  box-sizing: border-box;
 }
 
 .container {
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px;
-    max-width: 500px;
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+  margin-left: auto;
+  margin-right: auto;
+  padding: 30px;
+  max-width: 500px;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
 }
 
 .gameDetails {
-    grid-column: 1/4;
-    background-color: lightgray;
-    border: solid;
-    margin-bottom: 10px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    place-items: center;
+  grid-column: 1/4;
+  background-color: lightgray;
+  border: solid;
+  margin-bottom: 10px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  place-items: center;
 }
 
 .gameDetails__displayElement {
-    grid-row: 3/4;
-    grid-column: 1/3;
+  grid-row: 3/4;
+  grid-column: 1/3;
 }
 .gameDetails__button {
-    grid-column: 1/3;
+  grid-column: 1/3;
 }
 
-.blocks{
-    display: grid;
-    place-items: center;
-    font-size: 3em;
+.blocks {
+  display: grid;
+  place-items: center;
+  font-size: 3em;
 }
 
-#block1, #block2, #block4, #block5 {
-    border-bottom: var(--boardBorder);
-    border-right: var(--boardBorder);
+#block1,
+#block2,
+#block4,
+#block5 {
+  border-bottom: var(--boardBorder);
+  border-right: var(--boardBorder);
 }
-#block3, #block6 {
-    border-bottom: var(--boardBorder);
+#block3,
+#block6 {
+  border-bottom: var(--boardBorder);
 }
 
-#block7, #block8 {
-    border-right: var(--boardBorder);
+#block7,
+#block8 {
+  border-right: var(--boardBorder);
 }
